Add 3 new SAP Fiori tile types with SAP UI5 icon integration (v0.2.0)
New Tile Types:
- KPI Tile: Large number with status indicator and SAP icon watermark
- Launch Tile: App launcher with SAP icon and gradient hover effects
- Link List Tile: Multiple clickable links with SAP icons and animations

SAP UI5 Icons:
- Integrated SAP-icons font from official CDN
- Added 3 icons: Chart (&#xe0c1;), Table (&#xe1b3;), Home (&#xe112;)
- Documented 10+ common SAP icon codes in TILE_TYPES.md

Design Improvements:
- KPI Tile: 3-tier status system (Good/Warning/Critical)
- Launch Tile: Scale animation on hover (1.0 → 1.1)
- Link List Tile: Slide-in animation (translateX 4px)
- Added ~250 lines of CSS for new tile types

Documentation:
- Updated TILE_TYPES.md with comprehensive guides for 3 new tiles
- Added SAP UI5 Icon Integration section
- Updated VERSION.md with v0.2.0 release notes
- Updated package.json to v0.2.0

Total tile types: 8 → 11 (+37.5%)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sapui5-analytics-dashboard",
-  "version": "0.1.0",
-  "description": "Analytics Dashboard with SAP Fiori Tiles",
+  "version": "0.2.0",
+  "description": "Analytics Dashboard with SAP Fiori Tiles and SAP UI5 Icons",
   "type": "module",
   "scripts": {
     "test": "vitest",
