Major update: Deno testing, ExcelJS, and 3 new tile types (v0.3.0)
Testing Framework Migration (Vitest → Deno):
- Converted tests/constants.test.js to Deno format
- Converted tests/tile-renderer.test.js to Deno format
- Replaced Vitest assertions with Deno (assertEquals, assert)
- Updated package.json scripts to use 'deno test'
- Removed vitest.config.js and tests/setup.js
- Removed 4 Vitest dependencies from package.json

Excel Library Upgrade (SheetJS → ExcelJS):
- Rewrote js/utils/excel-handler.js to use ExcelJS v4.4.0
- Updated index-simple.html to load ExcelJS CDN
- Made exportToExcel async in 3 view files:
  * js/views/graphs-view-simple.js
  * js/views/dashboard-view-simple.js
  * js/views/data-view-simple.js
- Added styled headers (bold, blue background) to exports

3 New SAP Fiori Tile Types:
- Progress Tile: Goal tracking with animated gradient progress bar
  * Shimmer animation effect
  * Percentage display
  * Dynamic width based on completion
- Notification Tile: Badge with count and pulse animation
  * Pulsing badge (2s animation cycle)
  * Red notification dot indicator
  * Orange gradient on hover
- Timeline Tile: Activity feed with colored status dots
  * Success (green), Warning (orange), Error (red) states
  * Vertical timeline with dots
  * Recent activity display

Code Quality Improvements:
- Removed duplicate Numeric Content tile (was showing type twice)
- Added ~240 lines of CSS for 3 new tile types
- Total tile types: 11 → 14 (+27%)

Documentation Updates:
- Updated README.md: SheetJS → ExcelJS, added Deno Test
- Updated docs/VERSION.md with v0.3.0 release notes
- Updated package.json to v0.3.0
- Updated tiles-view-simple.js reference section (14 types)

Statistics:
- Files modified: 10
- Files removed: 2 (vitest config files)
- Test files converted: 2
- New tile types: 3
- New CSS animations: 2 (shimmer, pulse)
- Dependencies removed: 4 (vitest packages)

--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
   "name": "sapui5-analytics-dashboard",
-  "version": "0.2.0",
-  "description": "Analytics Dashboard with SAP Fiori Tiles and SAP UI5 Icons",
+  "version": "0.3.0",
+  "description": "Analytics Dashboard with 14 SAP Fiori Tile Types",
   "type": "module",
   "scripts": {
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
-    "test:run": "vitest run"
-  },
-  "devDependencies": {
-    "@vitest/ui": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "vitest": "^1.0.0",
-    "jsdom": "^23.0.0"
+    "test": "deno test --allow-read",
+    "test:watch": "deno test --allow-read --watch",
+    "test:coverage": "deno test --allow-read --coverage=coverage",
+    "test:coverage-report": "deno coverage coverage --lcov --output=coverage.lcov"
   },
   "keywords": [
     "sapui5",
