Add Chart Types showcase page with 6 chart types (v0.4.0)
New Page: Chart Types Showcase
- Created js/views/chart-types-view-simple.js (300+ lines)
- Displays 6 different Chart.js chart types:
  1. Line Chart - Trend visualization with area fill
  2. Bar Chart - Colorful category comparison
  3. Radar Chart - Multi-variable analysis (up to 3 datasets)
  4. Doughnut Chart - Proportional data with right-side legend
  5. Polar Area Chart - Circular data with variable radius
  6. Bubble Chart - 3D relationship visualization (x, y, radius)

Features:
- Side-by-side grid layout (2 columns, responsive)
- Each chart includes title and use case description
- Comprehensive comparison table below charts
- Auto-generates from uploaded Excel data
- Uses first 6 records for optimal visibility
- SAP Fiori color palette (6 colors with transparency)
- Memory-safe: destroyChartTypesCharts() function
- Success toast notification when charts render

Navigation:
- Added /chart-types route to constants.js
- Added route handler in router-simple.js
- Added "Chart Types" menu item (📉 icon) in sidebar
- Requires data upload (uses requireData guard)

Documentation:
- Updated README.md: Mentioned 6 chart types showcase
- Updated docs/VERSION.md: Added v0.4.0 release notes
- Updated package.json: Version 0.3.0 → 0.4.0

Statistics:
- Total pages: 6 → 7
- Chart types: 6 (all with descriptions)
- New file: 1 (chart-types-view-simple.js)
- Files modified: 6
- Lines added: ~300

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sapui5-analytics-dashboard",
-  "version": "0.3.0",
-  "description": "Analytics Dashboard with 14 SAP Fiori Tile Types",
+  "version": "0.4.0",
+  "description": "Analytics Dashboard with 14 Tiles and 6 Chart Types",
   "type": "module",
   "scripts": {
     "test": "deno test --allow-read",
