--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sapui5-analytics-dashboard",
-  "version": "0.4.0",
-  "description": "Analytics Dashboard with 14 Tiles and 6 Chart Types",
+  "version": "0.5.0",
+  "description": "Analytics Dashboard with 15 Tiles, 6 Chart Types, SAP Icons & Colors",
   "type": "module",
   "scripts": {
     "test": "deno test --allow-read",
